--- a/backend/docker-compose.yaml
+++ b/backend/docker-compose.yaml
@@ -35,7 +35,7 @@ services:
 
   postgres:
     container_name: postgres
-    image: postgres
+    image: postgres:16.3
     environment:
       POSTGRES_USER: "postgres"
       POSTGRES_PASSWORD: "5432"
