--- a/backend/docker-compose.yaml
+++ b/backend/docker-compose.yaml
@@ -19,9 +19,23 @@ services:
       timeout: 20s
       retries: 3
 
+  createbuckets:
+    image: minio/mc
+    depends_on:
+      - minio
+    entrypoint: >
+      /bin/sh -c "
+      /usr/bin/mc alias set myminio http://minio:9000 minio minio123;
+      /usr/bin/mc mb myminio/covers;
+      /usr/bin/mc mb myminio/tracks;
+      /usr/bin/mc --debug anonymous set public myminio/covers;
+      /usr/bin/mc --debug anonymous set public myminio/tracks;
+      exit 0;
+      "
+
   postgres:
     container_name: postgres
-    image: postgres:16.3
+    image: postgres
     environment:
       POSTGRES_USER: "postgres"
       POSTGRES_PASSWORD: "5432"
